# Anki-Flashcards-Maker

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  start_webui.bat  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adapters.rs  commands.rs  db.rs  domain.rs  flashcards.rs  lib.rs  main.rs  vertex_ai.rs
